--- a/inkwhale_contract/contracts/token_contract/Cargo.toml
+++ b/inkwhale_contract/contracts/token_contract/Cargo.toml
@@ -18,7 +18,7 @@ scale-info = { version = "2", default-features = false, features = ["derive"], o
 
 # These dependencies
 inkwhale_project = { path = "../..", default-features = false }
-openbrush = { tag = "v2.3.0", git = "https://github.com/Supercolony-net/openbrush-contracts", default-features = false, features = ["psp22"] }
+openbrush = { tag = "v2.3.0", git = "https://github.com/Supercolony-net/openbrush-contracts", default-features = false, features = ["ownable","psp22"] }
 
 [lib]
 name = "my_psp22"
