Migrate for token contracts

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # Ignore build artifacts from the local tests sub-crate.
-/target/
+target
 
 # Ignore backup files creates by cargo fmt.
 **/*.rs.bk
@@ -10,3 +10,4 @@ Cargo.lock
 
 node_modules
 build
+._*
