--- a/contracts/token_generator/Cargo.toml
+++ b/contracts/token_generator/Cargo.toml
@@ -1,24 +1,18 @@
 [package]
 name = "token_generator"
-version = "2.3.0"
+version = "0.1.0"
 authors = ["Support <contact@artzero.io>"]
 edition = "2021"
 
 [dependencies]
-ink_primitives = { version = "~3.4.0", default-features = false }
-ink_metadata = { version = "~3.4.0", default-features = false, features = ["derive"], optional = true }
-ink_env = { version = "~3.4.0", default-features = false }
-ink_storage = { version = "~3.4.0", default-features = false }
-ink_lang = { version = "~3.4.0", default-features = false }
-ink_prelude = { version = "~3.4.0", default-features = false }
-ink_engine = { version = "~3.4.0", default-features = false, optional = true }
+ink = { git = "https://github.com/paritytech/ink", rev = "4655a8b4413cb50cbc38d1b7c173ad426ab06cde", default-features = false }
 
 scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
-scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }
+scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }
 
 # These dependencies
 inkwhale_project = { path = "../..", default-features = false }
-openbrush = { tag = "v2.3.0", git = "https://github.com/Supercolony-net/openbrush-contracts", default-features = false, features = ["ownable","psp22"] }
+openbrush = { git = "https://github.com/727-Ventures/openbrush-contracts", tag = "3.0.0-beta", default-features = false, features = ["ownable","psp22"] }
 my_psp22 = { path = "../token_contract", default-features = false, features = ["ink-as-dependency"]  }
 
 [lib]
@@ -27,18 +21,14 @@ path = "lib.rs"
 crate-type = [
     # Used for normal contract Wasm blobs.
     "cdylib",
+    # Used for ABI generation and for unit test.
     "rlib"
 ]
 
 [features]
 default = ["std"]
 std = [
-    "ink_primitives/std",
-    "ink_metadata",
-    "ink_metadata/std",
-    "ink_env/std",
-    "ink_storage/std",
-    "ink_lang/std",
+    "ink/std",
     "scale/std",
     "scale-info",
     "scale-info/std",
