--- a/contracts/launchpad_generator/Cargo.toml
+++ b/contracts/launchpad_generator/Cargo.toml
@@ -11,7 +11,7 @@ scale-info = { version = "2.3", default-features = false, features = ["derive"],
 
 # These dependencies
 inkwhale_project = { path = "../..", default-features = false }
-openbrush = { git = "https://github.com/727-Ventures/openbrush-contracts", version = "~3.0.0", default-features = false, features = ["psp22", "ownable"] }
+openbrush = { git = "https://github.com/727-Ventures/openbrush-contracts", version = "~3.0.0", default-features = false, features = ["psp22", "ownable", "access_control"] }
 my_launchpad = { path = "../launchpad_contract", default-features = false, features = ["ink-as-dependency"]  }
 
 [lib]
