--- a/op4_contracts/Cargo.toml
+++ b/op4_contracts/Cargo.toml
@@ -5,19 +5,16 @@ authors = ["InkWhale <admin@artzero.io>"]
 edition = "2021"
 
 [dependencies]
-ink = { version = "4.2.1", default-features = false }
+ink = { version = "4.3.0", default-features = false }
 scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
 scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }
 
 # These dependencies
-openbrush = { tag = "4.0.0-beta", git = "https://github.com/Brushfam/openbrush-contracts", default-features = false, features = ["psp22", "ownable", "access_control"] }
+openbrush = { tag = "4.0.0", git = "https://github.com/Brushfam/openbrush-contracts", default-features = false, features = ["psp22", "ownable", "access_control"] }
 
 [lib]
 name = "inkwhale_project"
 path = "src/lib.rs"
-crate-type = [
-    "rlib",
-]
 
 [features]
 default = ["std"]
