Add azero staking events

--- a/op4_contracts/contracts/azero_staking/Cargo.toml
+++ b/op4_contracts/contracts/azero_staking/Cargo.toml
@@ -1,20 +1,20 @@
 [package]
-name = "azero_staking"
+name = "my_azero_staking"
 version = "1.0.0"
 authors = ["InkWhale <admin@artzero.io>"]
 edition = "2021"
 
 [dependencies]
-ink = { version = "4.2.1", default-features = false }
+ink = { version = "4.3.0", default-features = false }
 scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
 scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }
 
 # These dependencies
 inkwhale_project = { path = "../..", default-features = false }
-openbrush = {  tag = "4.0.0-beta", git = "https://github.com/Brushfam/openbrush-contracts", default-features = false, features = ["psp22", "ownable", "access_control"] }
+openbrush = {  tag = "4.0.0", git = "https://github.com/Brushfam/openbrush-contracts", default-features = false, features = ["psp22", "ownable", "access_control"] }
 
 [lib]
-name = "azero_staking"
+name = "my_azero_staking"
 path = "lib.rs"
 
 [features]
@@ -33,3 +33,6 @@ ink-as-dependency = []
 
 [profile.dev]
 codegen-units = 16
+
+[profile.release]
+overflow-checks = false
