Add pausable contract for inw swap

--- a/op4_contracts/contracts/inw_swap/Cargo.toml
+++ b/op4_contracts/contracts/inw_swap/Cargo.toml
@@ -10,7 +10,7 @@ scale = { package = "parity-scale-codec", version = "3", default-features = fals
 scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }
 
 # These dependencies
-openbrush = { tag = "4.0.0", git = "https://github.com/Brushfam/openbrush-contracts", default-features = false, features = ["psp22", "ownable"] }
+openbrush = { tag = "4.0.0", git = "https://github.com/Brushfam/openbrush-contracts", default-features = false, features = ["psp22", "ownable", "pausable"] }
 inkwhale_project = { path = "../..", default-features = false }
 
 [lib]
