--- a/op4_contracts/Cargo.toml
+++ b/op4_contracts/Cargo.toml
@@ -10,7 +10,8 @@ scale = { package = "parity-scale-codec", version = "3", default-features = fals
 scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }
 
 # These dependencies
-openbrush = { tag = "4.0.0", git = "https://github.com/Brushfam/openbrush-contracts", default-features = false, features = ["psp22", "ownable", "access_control", "pausable"] }
+openbrush = {  tag = "4.0.0-beta", git = "https://github.com/Brushfam/openbrush-contracts", default-features = false, features = ["psp22", "ownable", "access_control", "pausable"] }
+primitive-types = { version = "0.12.2", default-features = false }
 
 [lib]
 name = "inkwhale_project"
