--- a/op4_contracts/contracts/lp_pool_generator/Cargo.toml
+++ b/op4_contracts/contracts/lp_pool_generator/Cargo.toml
@@ -8,6 +8,28 @@ edition = "2021"
 ink = { version = "4.2.1", default-features = false }
 scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
 scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }
+log = { version = "0.4.17", default-features = false }
+serde = { version = "1.0.188", optional = true,  default-features = false, features = ["derive", "alloc"] }
+bounded-collections = { version = "0.1.8", default-features = false }
+primitive-types = { version = "0.12.0", default-features = false, features = ["codec", "scale-info"] }
+impl-serde = { version = "0.4.0", default-features = false, optional = true }
+hash-db = { version = "0.16.0", default-features = false }
+hash256-std-hasher = { version = "0.15.2", default-features = false }
+bs58 = { version = "0.5.0", default-features = false, optional = true }
+rand = { version = "0.8.5", features = ["small_rng"],  optional = true }
+substrate-bip39 = { version = "0.4.4", optional = true }
+tiny-bip39 = { version = "1.0.0", optional = true }
+regex = { version = "1.6.0", optional = true }
+zeroize = { version = "1.4.3", default-features = false }
+secrecy = { version = "0.8.0", default-features = false }
+lazy_static = { version = "1.4.0", default-features = false, optional = true }
+parking_lot = { version = "0.12.1", optional = true }
+futures = { version = "0.3.21", optional = true }
+dyn-clonable = { version = "0.9.0", optional = true }
+thiserror = { version = "1.0.48", optional = true }
+tracing = { version = "0.1.29", optional = true }
+bitflags = "1.3"
+paste = "1.0.7"
 
 # These dependencies
 inkwhale_project = { path = "../..", default-features = false }
