--- a/contracts/nft_pool_generator/Cargo.toml
+++ b/contracts/nft_pool_generator/Cargo.toml
@@ -5,13 +5,14 @@ authors = ["InkWhale <admin@artzero.io>"]
 edition = "2021"
 
 [dependencies]
-ink = { version = "4.1.0", default-features = false}
+ink = { version = "~4.0.0", default-features = false }
 scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
 scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }
 
 # These dependencies
 inkwhale_project = { path = "../..", default-features = false }
-openbrush = { git = "https://github.com/727-Ventures/openbrush-contracts", version = "~3.0.0", default-features = false, features = ["ownable","psp22"] }
+primitive-types = { version = "0.12.0", default-features = false, features = ["codec", "scale-info"] }
+openbrush = { tag = "3.0.0", git = "https://github.com/727-Ventures/openbrush-contracts", default-features = false, features = ["ownable","psp22", "access_control"] }
 my_nft_pool = { path = "../nft_pool_contract", default-features = false, features = ["ink-as-dependency"]  }
 
 [lib]
