--- a/contracts/pool_contract/Cargo.toml
+++ b/contracts/pool_contract/Cargo.toml
@@ -5,13 +5,14 @@ authors = ["InkWhale <admin@artzero.io>"]
 edition = "2021"
 
 [dependencies]
-ink = { version = "4.1.0", default-features = false}
+ink = { version = "~4.0.0", default-features = false }
+primitive-types = { version = "0.12.0", default-features = false, features = ["codec", "scale-info"] }
 scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
 scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }
 
 # These dependencies
 inkwhale_project = { path = "../..", default-features = false }
-openbrush = { git = "https://github.com/727-Ventures/openbrush-contracts", version = "~3.0.0", default-features = false, features = ["ownable"] }
+openbrush = { tag = "3.0.0", git = "https://github.com/727-Ventures/openbrush-contracts", default-features = false, features = ["ownable", "access_control"] }
 
 [lib]
 name = "my_pool"
@@ -39,3 +40,7 @@ ink-as-dependency = []
 
 [profile.dev]
 codegen-units = 16
+overflow-checks = false
+
+[profile.release]
+overflow-checks = false
